syntax = "proto3";

package phonebook;

option go_package = "phonebookpb/phonebookpb";

import "google/protobuf/timestamp.proto";

message Person {
  string id = 1;
  string name = 2;
  string email = 3;

  enum PhoneType {
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
  }

  message PhoneNumber {
    string number = 1;
    PhoneType type = 2;
  }

  repeated PhoneNumber phones = 4;
  google.protobuf.Timestamp last_updated = 5;
}

message PersonRequest { Person person = 1; }

message PersonResponse { Person person = 1; }

message ReadPersonRequest { string person_id = 1; }

service PhoneBookService {
  rpc CreatePerson(PersonRequest) returns (PersonResponse) {};

  rpc ReadPerson(ReadPersonRequest) returns (PersonResponse) {};
};